k8s/yaml/subride/member.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member
  namespace: ondal
  labels:
    app: member
spec:
  selector:
    matchLabels:
      app: member
  replicas: 1
  template:
    metadata:
      name: member
      labels:
        app: member
    spec:
      imagePullSecrets:
        - name: dockerhub
      containers:
        - name: member
          image: docker.io/hiondal/member:2.0.0
          imagePullPolicy: Always
          ports:
            - name: container-port
              containerPort: 18080
          resources:
            requests:
              cpu: 256m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: member
  namespace: ondal
spec:
  type: ClusterIP
  selector:
    app: member
  ports:
    - name: member
      port: 18080
      targetPort: 18080
---
apiVersion: v1
kind: Service
metadata:
  name: member-headless
  namespace: ondal
spec:
  clusterIP: None
  selector:
    app: member
  ports:
    - name: member
      port: 18080
      targetPort: 18080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: member
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: member.43.200.12.214.nip.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: member
                port: 
                  number: 18080
